fixed alignments

--- a/src/App.css
+++ b/src/App.css
@@ -80,15 +80,16 @@
 
 .slider{
     position: relative;
-    top: -55px;
+    top: -70px;
     z-index: 0;
     height: 95vh;
+    margin-bottom: -15px;
 }
 
  .movie-poster{
     width: 100vw;
     position: relative;
-    top: 160px;
+    top: 180px;
     
 }
 /* created a container for overlay on image */
@@ -150,9 +151,9 @@
 /* slider movie buttons */
 
 .watch-movie-buttons{
-    position: relative;   
-    left: 1050px; 
-    top: 30px;
+    float: right;
+    margin: 10px;
+    margin-right: 100px;
 
 
 }
@@ -241,6 +242,10 @@
     box-shadow: 0px 15px 20px 0px rgba(0,0,0,0.9);
 }
 
+.movie-card .movie-card-container{
+    margin: 10px
+}
+
 .movie-card .movie-card-title{
     list-style-type: none;
     text-align: start;
@@ -256,12 +261,18 @@
 .movie-card-details{
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    
     padding-left: 3px;
     padding-right: 10px;
     font-size: 0.7em;
     font-weight: 600;
+    
 }
+.movie-card-details li {
+    margin-right: 105px;
+}
+
+
 
 .movie-card-details  .movie-card-year{
     color: rgba(255, 255, 255, 0.5);
@@ -273,7 +284,7 @@
 .movie-card-details .movie-card-star-icon{
     height: 1em;
     position: relative;
-    left: 55px;
+    left: 35px;
     top: 1px;
     color: rgba(255, 255, 0, 0.8);
 }
@@ -395,9 +406,9 @@
 
 .movie-details-poster{
     position: relative;
-    width: 99vw;
+    width: 99.5vw;
     height: 100vh;
-    top: -50px;
+    top: -75px;
     
 }
 
